# ifs-l-system

./: README.md  main.py  pyproject.toml
src/: Gcode_cache.py  Lsystem.py  ifs.py  sierpinski.py  test_L_system.py
src/gcode_output/: other_output_binary_tree.gcode  output_cantor.gcode  output_context_aware.gcode  output_dragon_curve.gcode  output_fractal_plant.gcode  output_koch_curve.gcode  output_sierpinski.gcode  output_sierpinski_arrowhead.gcode  output_stochastic.gcode
